--- a/views/categorylist.erb
+++ b/views/categorylist.erb
@@ -2,20 +2,20 @@
     <p style="text-align:center"><a href='/recipes/new' style = "font-size: 120%"> Create a new recipe </a>
     </p>
     <br>
-    <% if @recipetitles.any? %>
+    <% if @recipecats.any? %>
       <table style="width:50%" class="center">
         <tr>
           <th> Title </th>
         </tr>
-         <% @recipetitles.each do |title| %>
+         <% @recipecats.each do |category| %>
             <tr>
-              <td> <a href = "/recipes/<%="#{title[1]}"%>">
-                          <%= "#{title[0]}" %> </a>
+              <td> <a href = "listrecipesincat/<%="#{category}"%>">
+                          <%= "#{category}" %> </a>
               </td>
             </tr>
          <% end %>
        </table>
        <% else %>
-          <p> No recipes have been created. </p>
+          <p> No categories have been created. </p>
     </p>      
     <% end %>
