--- a/views/nav.erb
+++ b/views/nav.erb
@@ -4,7 +4,7 @@
         <li><a href="/about" title="About">About</a></li>
         <li><a href="/contact" title="Contact">Contact</a></li>
         <li><a href="/recipelist" title="Recipe List">Recipe List</a></li>
-        <li><a href="/models" title="Models">Models</a></li>
+        <li><a href="/categorylist" title="Categories">Category List</a></li>
         <li><a href="/references" title="References">References</a></li>
         <li><a href="/books" title="Books">Books</a></li>
         <li><a href="/authors" title="Authors">Authors</a></li>
