Work on new_recipe.

--- a/views/nav.erb
+++ b/views/nav.erb
@@ -5,8 +5,9 @@
         <li><a href="/contact" title="Contact">Contact</a></li>
         <li><a href="/recipelist" title="Recipe List">Recipe List</a></li>
         <li><a href="/categorylist" title="Categories">Category List</a></li>
-        <li><a href="/references" title="References">References</a></li>
-        <li><a href="/books" title="Books">Books</a></li>
+
+        <li><a href='/recipes/new' title="Create a New Reference"> Create a new recipe </a> </li
+
         <li><a href="/authors" title="Authors">Authors</a></li>
         <li><a href="/journals" title="Journals">Journals</a></li>
       </ul>
