--- a/views/styles.scss
+++ b/views/styles.scss
@@ -130,3 +130,21 @@ th {
     z-index: -1;
   }
 }
+
+/*  For forms */
+
+label {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  text-align: right;
+  width: 700px;
+  line-height: 26px;
+  margin-bottom: 10px;
+}
+
+input {
+  height: 20px;
+  flex: 0 0 200px;
+  margin-left: 10px;
+}
