--- a/views/recipe_form.erb
+++ b/views/recipe_form.erb
@@ -1,17 +1,17 @@
 <label for = "title">Title: 
-<input id = "title" type = "text" name = "recipe[title]" size = "20" value = "<%= "#{@recipe.title}" %>" >
+<input id = "title" type = "text" name = "recipe[:title]" size = "20" value = "<%= "#{@recipe.title}" %>" >
 </label>
 
 <label for = "author"> &nbsp Author: 
-<input id = "author" type = "text" name = "recipe[author]" size = "20" value = "<%= "#{@recipe.author}" %>" >
+<input id = "author" type = "text" name = "recipe[:author]" size = "20" value = "<%= "#{@recipe.author}" %>" >
 </label>
 
 <label for = "servings"> Number of Serivngs: 
-<input for = "servings" type = "integer" name = "recipe[servings]" size = "4" value = "<%= "#{@recipe.servings}" %>" >
+<input for = "servings" type = "integer" name = "recipe[:servings]" size = "4" value = "<%= "#{@recipe.servings}" %>" >
 </label>
 
 <label for = "preptime"> Prep Time: 
-<input for = "preptime" type = "text" name = "recipe[preptime]" size = "5" value = "<%= "#{@recipe.preptime}" %>" >
+<input for = "preptime" type = "text" name = "recipe[:preptime]" size = "5" value = "<%= "#{@recipe.preptime}" %>" >
 </label>
 
 <%# Prints a table for the ingreidients input %>
@@ -23,16 +23,16 @@
 <% @recipe.ingreidients.each_with_index do |ingd, i| %>
   <tr>
   <td>
-  <input type = "text" name = "recipe[ingreidients][i][:amount]" size = "4" value = "<%="#{ingd[:amount]}"%>" >
+  <input type = "text" name = "recipe[:ingreidients][<%"#{i}"%>][:amount]" size = "4" value = "<%="#{ingd[:amount]}"%>" >
   </td>  
   <td>
-  <input type = "text" name = "recipe[ingreidients][i][:measure]" size = "4" value = "<%="#{ingd[:measure]}"%>" >
+  <input type = "text" name = "recipe[:ingreidients][<%"#{i}"%>][:measure]" size = "4" value = "<%="#{ingd[:measure]}"%>" >
   </td>
   <td>
-  <input type = "text" name = "recipe[ingreidients][i][:name]" size = "25" value = "<%="#{ingd[:name]}"%>" >
+  <input type = "text" name = "recipe[:ingreidients][<%"#{i}"%>][:name]" size = "25" value = "<%="#{ingd[:name]}"%>" >
   </td>
   </tr>
- <% end %> 
+<% end %> 
 </table>
 
 <%# Prints the ordered list for directions %>
@@ -41,8 +41,8 @@
 <ol>
 <% @recipe.directions.each_with_index do |dir, i| %>
   <li>  
-  <textarea rows = "1" cols = "80" name = "recipe[directions][i]"  value = " <%="  #{dir}"%>" > 
-  </textarea>
+    <input type = "text" name = "recipe[:directions][<%"#{i}"%>]", value = "<%="#{dir}"%>" >
+
   </li>
 <% end %> 
  </ol>
@@ -52,3 +52,8 @@
 <input type = "submit" value = "Save recipe">
 </p>
 <br>
+
+<%# save %>
+<%# <textarea rows = "1" cols = "80" name = "recipe %><%# [:directions][<%"#{i}"%>]" > %>
+<%# <%="#{dir}"%> %>
+<%# </textarea> %>
