--- a/views/show_recipe.erb
+++ b/views/show_recipe.erb
@@ -8,14 +8,14 @@
 <a href="/recipelist" style="font-size:150%"> back to recipe list </a>
 </p>
 
-<h2  style="font-size:150%;text-align:center;text-color:red"> Ingreidients </h2>
+<h2  style="font-size:150%;text-align:center;text-color:red"> ingredients </h2>
 <table style="width:75%" class="center">
   <tr>
       <th> Amount </th>
       <th> Measure </th>
       <th> Ingredient and Prep Method </th>
   </tr>
-  <% @recipe[:ingreidients].each  do |ingrdt| %>
+  <% @recipe[:ingredients].each  do |ingrdt| %>
     <tr>
     <td style = "text-align:center; font-size:130%"> <%= "  #{ingrdt[:amount]} " %> </td> 
     <td style = "text-align:center; font-size:130%"> <%= "  #{ingrdt[:measure]}" %> </td>
