--- a/views/nav.erb
+++ b/views/nav.erb
@@ -5,10 +5,7 @@
         <li><a href="/contact" title="Contact">Contact</a></li>
         <li><a href="/recipelist" title="Recipe List">Recipe List</a></li>
         <li><a href="/categorylist" title="Categories">Category List</a></li>
-
+        <li><a href="/search" title="Search">Search</a></li>
         <li><a href='/recipes/new' title="Create a New Reference"> Create a new recipe </a> </li
-
-        <li><a href="/authors" title="Authors">Authors</a></li>
-        <li><a href="/journals" title="Journals">Journals</a></li>
       </ul>
     </nav>
