Update to ruby version 3.0.1.

--- a/views/nav.erb
+++ b/views/nav.erb
@@ -5,7 +5,6 @@
         <li><a href="/contact" title="Contact">Contact</a></li>
         <li><a href="/recipelist" title="Recipe List">Recipe List</a></li>
         <li><a href="/categorylist" title="Categories">Category List</a></li>
-        <li><a href="/search" title="Search">Search</a></li>
-        <li><a href='/recipes/new' title="Create a New Reference"> Create a new recipe </a> </li
+        <li><a href='/recipes/new' title="Create a New Reference"> Create a new recipe </a> </li>
       </ul>
     </nav>
